--- a/react/public/index.html
+++ b/react/public/index.html
@@ -5,7 +5,10 @@
         <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="We Offer Instant Recharges of Airtime Topup, Internet Data, electricity Bill and Cable TV Subscriptions." />
+        <meta
+            name="description"
+            content="We Offer Instant Recharges of Airtime Topup, Internet Data, electricity Bill and Cable TV Subscriptions."
+        />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,12 +26,7 @@
     -->
         <title>Sub4Data</title>
         <!-- <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID"></script> -->
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
-            integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -50,4 +48,25 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     --></body>
+    <script type="text/javascript">
+        (function () {
+            var options = {
+                whatsapp: '971582546208', // WhatsApp number
+                call_to_action: 'Hi', // Call to action
+                position: 'left' // Position may be 'right' or 'left'
+            };
+            var proto = document.location.protocol,
+                host = 'getbutton.io',
+                url = proto + '//static.' + host;
+            var s = document.createElement('script');
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = url + '/widget-send-button/js/init.js';
+            s.onload = function () {
+                WhWidgetSendButton.init(host, proto, options);
+            };
+            var x = document.getElementsByTagName('script')[0];
+            x.parentNode.insertBefore(s, x);
+        })();
+    </script>
 </html>
