--- a/react/public/index.html
+++ b/react/public/index.html
@@ -50,29 +50,32 @@
     --></body>
     <script type="text/javascript">
         (function () {
-            var options = {
-                whatsapp: '971582546208', // WhatsApp number
-                call_to_action: 'Hi', // Call to action
-                position: 'right' // Position may be 'right' or 'left'
-            };
-            var proto = document.location.protocol,
-                host = 'getbutton.io',
-                url = proto + '//static.' + host;
-            var s = document.createElement('script');
-            s.type = 'text/javascript';
-            s.async = true;
-            s.src = url + '/widget-send-button/js/init.js';
-            s.onload = function () {
-                WhWidgetSendButton.init(host, proto, options);
-            };
-            var x = document.getElementsByTagName('script')[0];
-            x.parentNode.insertBefore(s, x);
+
+            if (localStorage.getItem('auth_role') !== "admin") {
+                var options = {
+                    whatsapp: '971582546208', // WhatsApp number
+                    call_to_action: 'Hi', // Call to action
+                    position: 'right' // Position may be 'right' or 'left'
+                };
+                var proto = document.location.protocol,
+                    host = 'getbutton.io',
+                    url = proto + '//static.' + host;
+                var s = document.createElement('script');
+                s.type = 'text/javascript';
+                s.async = true;
+                s.src = url + '/widget-send-button/js/init.js';
+                s.onload = function () {
+                    WhWidgetSendButton.init(host, proto, options);
+                };
+                var x = document.getElementsByTagName('script')[0];
+                x.parentNode.insertBefore(s, x);
+            }
         })();
     </script>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2NEVN43WXL"></script>
-    <script>
+    <script>        
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
