--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -34,6 +34,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
