--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -81,10 +81,12 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2NEVN43WXL"></script>
     <script>        
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+        (function () {
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-        gtag('config', 'G-2NEVN43WXL');
+            gtag('config', 'G-2NEVN43WXL');
+        })();
     </script>
 </html>
