--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,10 @@
         />
         <meta name="keywords"
             content="Easiest way to convert airtime to cash in Nigeria, Make payment with airtime, Send and receive payment in Nigeria with airtime, airtime is money, buy cheap data, MTN, Glo, 9mobile, Airtel, make payment for Gotv, Dstv" />
-        <meta property="og:image" content="https://aimtoget.com/assets/images/new/favicon.png">
+        <meta property="og:image" 
+            content="https://aimtoget.com/assets/images/new/favicon.png"
+        />
+        <meta name="csrf-token" content="{{ csrf_token() }}" />
         <title>Sub4Data - Topups and Bills Payment</title>
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -28,6 +31,7 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
+        
         <script type="text/javascript">
             (function () {
 
